fix(hero): fixed wrapping of the paragraph

--- a/styles/hero/PromoText.module.scss
+++ b/styles/hero/PromoText.module.scss
@@ -36,9 +36,7 @@
 	margin: 0 0 10px;
 
 	@media (max-width: 768px) {
-		width: 100vw;
 		word-wrap: break-word;
-		margin-right: 15px;
 	}
 }
 
